fix popups align-method

--- a/main.css
+++ b/main.css
@@ -152,14 +152,14 @@ main{
 }
 
 .modal{
-    position: fixed;
+    position:fixed;
     left: 0;
     top:0;
     width: 100%;
     height: 100vh;
     z-index: 99998;
     background-color: rgba(0,0,0,.5);
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     overflow-y: auto;
@@ -171,7 +171,7 @@ main{
 .modal_box{
     max-width: 500px;
     padding: 45px;
-    margin: 40px 15px;
+    margin: 30px 15px;
     z-index: 1;
     background-color: #fff;
     display: flex;
